istio/initial_destination_rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-boot-istio-circuit-breaker-name-destination-initial
spec:
  host: spring-boot-istio-circuit-breaker-name
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 10
