istio/name_with_delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-istio-circuit-breaker-delayed-name
spec:
  hosts:
  - spring-boot-istio-circuit-breaker-name
  http:
  - fault:
      delay:
        percent: 50
        fixedDelay: 1s
    route:
    - destination:
        port:
          number: 8080
        host: spring-boot-istio-circuit-breaker-name
